# DataExtractor

./: .gitignore  README.md  codex.local.md  pyproject.toml  requirements.txt  run.py
common/: capture.py  cli.py  codec.py  config.py  dns_tunnel.py  frame.py  integrity.py
data/: input.txt
docs/: architecture.md  testanleitung.md
receiver/: arp_transport.py  dns_transport.py  main.py  snmp_transport.py  transport.py
scripts/: run_receiver.sh  run_sender.sh
sender/: arp_transport.py  dns_transport.py  main.py  snmp_transport.py  transport.py
tests/: test_capture.py  test_cli_validation.py  test_codec.py  test_dns_tunnel.py  test_e2e_methods.py  test_frame.py  test_receiver_grace.py  test_run.py  test_sender_wait.py  test_transport_integration.py
