[project]
name = "network-security-icmp-lab"
version = "0.1.0"
description = "Educational ICMP sender/receiver scaffold for network security lab."
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
